--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,21 +7,22 @@
             <link rel="stylesheet" href="{{ asset('bootstrap/dist/css/bootstrap.css') }}" />
             <link rel="stylesheet" href="{{ asset('menu/css/reset.css') }}" />
             <link rel="stylesheet" href="{{ asset('menu/css/style.css') }}" />
+            <link rel="stylesheet" href="{{ asset('css-js/style.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         <header>
-            <div class="cd-logo"><a href="#0"><img src="{{ asset('menu/img/cd-logo.svg') }}" alt="Logo"></a></div>
+            <div class="cd-logo"><a href="{{ path('unipro-homepage') }}"><img src="{{ asset('menu/img/cd-logo.svg') }}" alt="Logo"></a></div>
 
             <nav class="cd-main-nav-wrapper">
                 <ul class="cd-main-nav">
-                    <li><a class="btn btn-info" href="#0">Dobierz wentylator</a></li>
-                    <li><a href="#0">O firmie</a></li>
-                    <li><a href="#0">Oferta</a></li>
-                    <li><a href="#0">Usługi</a></li>
-                    <li><a href="#0">Kontakt</a></li>
-                    <li><a href="#0">Galeria</a></li>
+                    <li><a class="btn btn-info" href="#0"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Dobierz wentylator</a></li>
+                    <li><a href="{{ path('unipro-subpage', {'subPage': 'o-firmie'}) }}">O firmie</a></li>
+                    <li><a href="{{ path('unipro-subpage', {'subPage': 'about'}) }}">Oferta</a></li>
+                    <li><a href="{{ path('unipro-subpage', {'subPage': 'about'}) }}">Usługi</a></li>
+                    <li><a href="{{ path('unipro-subpage', {'subPage': 'about'}) }}">Kontakt</a></li>
+                    <li><a href="{{ path('unipro-subpage', {'subPage': 'about'}) }}">Galeria</a></li>
                     <li>
                         <a href="#0" class="cd-subnav-trigger"><span>Inne</span></a>
                         <ul>
@@ -38,7 +39,47 @@
             <a href="#0" class="cd-nav-trigger"><span></span></a>
         </header>
         <main class="cd-main-content">
+            {#karuzela#}
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel" data-slide-to="1"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="http://cdn.mustangtrailrace.com/wp-content/uploads/2012/12/panorama-mustang-trail-race-Annapurna-panorama-2000px-isobel.jpg" alt="opis obrazka">
+                        <div class="carousel-caption">
+                            Podpis 1 slajdu
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="http://powerfullivingtoday.com/wp-content/uploads/2015/09/news-2000x483.png" alt="opis obrazka">
+                        <div class="carousel-caption">
+                            Podpis 2 slajdu
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
             {% block body %}{% endblock %}
+            <footer>
+                Lorem impsum <br/>
+                Lorem impsum <br/>
+                Lorem impsum <br/>
+                Lorem impsum <br/>
+            </footer>
         </main>
         {% block javascripts %}
             <script src="{{ asset('menu/js/modernizr.js') }}"></script>
