--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,76 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css-js/style.css') }}" />
-{% endblock %}
 {% block body %}
-{#karuzela#}
-<div id="carousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel" data-slide-to="1"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="http://cdn.mustangtrailrace.com/wp-content/uploads/2012/12/panorama-mustang-trail-race-Annapurna-panorama-2000px-isobel.jpg" alt="opis obrazka">
-            <div class="carousel-caption">
-                Podpis 1 slajdu
+{#kółka#}
+<div class="container up-main">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="up-mainpage-divs">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                <a class="up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
             </div>
         </div>
-        <div class="item">
-            <img src="http://powerfullivingtoday.com/wp-content/uploads/2015/09/news-2000x483.png" alt="opis obrazka">
-            <div class="carousel-caption">
-                Podpis 2 slajdu
+        <div class="col-md-4">
+            <div class="up-mainpage-divs">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                <a class="up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="up-mainpage-divs">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                <a class="up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
             </div>
         </div>
     </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-{#kółka#}
-<div class="container up-mainpage">
-    <div class="row">
-        <div class="col-md-4">
-            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <a class="btn btn-default up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-4">
-            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <a class="btn btn-default up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-md-4">
-            <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <a class="btn btn-default up-mainpage-button" href="#" role="button">Więcej &raquo;</a>
-        </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
 </div>
 {% endblock %}
-{#{% block javascripts %}#}
-    {#{{ parent() }}#}
-    {#<script type="text/javascript">#}
-        {#$(document).ready(function(){#}
-            {#$('.carousel').carousel({#}
-                {#interval: 3000#}
-            {#})#}
-        {#});#}
-    {#</script>#}
-{#{%  endblock %}#}
