--- a/app/Resources/views/admin/edit.html.twig
+++ b/app/Resources/views/admin/edit.html.twig
@@ -1,9 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <div class="container up-main">
+        {% for msg in app.session.flashBag.get('success') %}
         <div class="row">
             <div class="col-md-12">
-                <h1>SubPages</h1>
+                <div class="alert alert-success">
+                        {{ msg }}
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        <div class="row">
+            <div class="col-md-10">
+                <h1>Podstrony</h1>
+            </div>
+            <div class="col-md-1">
+                <a class="btn btn-success" href="{{ path('unipro-admin-new') }}">Stwórz</a>
+            </div>
+            <div class="col-md-1">
+                <a class="btn btn-warning" href="{{ path('unipro-admin-index') }}" role="button">Wróć &raquo;</a>
             </div>
         </div>
         <div class="row">
@@ -27,7 +42,7 @@
                             <td>{{ page.title }}</td>
                             <td>{{ page.description }}</td>
                             <td>{{ page.postedAt|date('Y-m-d H:i:s') }}</td>
-                            <td><a class="btn btn-info" href="{{ path('unipro-admin-edit', {'entity':'PagesContent', 'id': page.id}) }}">
+                            <td><a class="btn btn-info" href="{{ path('unipro-admin-edit', {'id': page.id}) }}">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a></td>
                         </tr>
